test/spec_vectors/align/ok/module_9.wat
(module (memory 0) (func (drop (i64.load32_s align=4 (i32.const 0)))))